Setting up basic game logic